# helengine-psp

./: .gitignore  .task1-baseline.ps1  CMakeLists.txt  Dockerfile  Makefile  PSP Research.md  README.md  runtime_scene_catalog_manifest.cpp  runtime_scene_catalog_manifest.hpp  runtime_startup_manifest.cpp  runtime_startup_manifest.hpp
builder/: IPspNativeBuildExecutor.cs  IPspPlatformCookSourceProcessor.cs  Program.cs  PspAppLayoutWriter.cs  PspBuildWorkspace.cs  PspGeneratedCoreCompatibilityNormalizer.cs  PspNativeBuildExecutor.cs  PspPlatformAssetBuilder.cs  PspPlatformCookSourceProcessor.cs  PspPlatformDefinitionFactory.cs  PspRuntimeNativeManifestWriter.cs  PspTextureCookSettingsSerializer.cs
builder.tests/: CityAxisTestSceneTests.cs  CityColoredCubeGridSceneTests.cs  CityDemoDiscMainMenuSceneTests.cs  CityGeneratedMaterialAssetWriteServiceSourceTests.cs  CitySphereStackMaterialLoadOrCreateTests.cs  CityTexturedCubeGridMaterialSettingsTests.cs  CityTexturedCubeGridSceneTests.cs  EditorAssetTestReader.cs  FakePspNativeBuildExecutor.cs  FakePspPlatformCookSourceProcessor.cs  FakeRuntimeTexture.cs  MaterialAssetSettingsServiceMultiPlatformRoundTripTests.cs  ProgramTests.cs  PspBuilderTestTextureImporter.cs  PspGeneratedCoreCompatibilityNormalizerTests.cs  PspInputBackendSourceTests.cs  PspMaterialPackagingSourceTests.cs  PspNativeBuildExecutorTests.cs  PspPackagedRuntimeSourceTests.cs  PspPlatformAssetBuilderTests.cs  PspPpssppLauncherScriptTests.cs  PspRenderManager3DSourceTests.cs  PspRepositoryPathResolver.cs  PspRuntimeNativeManifestWriterTests.cs  PspTexturedMaterialPackagingRegressionTests.cs  RecordingDiagnosticReporter.cs  RecordingProgressReporter.cs  TestRuntimeMaterial.cs  helengine.psp.builder.tests.csproj
docs/: Docker.md  PSP Graphics Research.md
docs/superpowers/plans/: 2026-05-01-helengine-sony-psp-bootstrap.md  2026-05-10-helengine-psp-city-cube-test.md  2026-05-11-helengine-psp-blank-frame-boot.md  2026-05-11-helengine-psp-directional-lighting.md  2026-05-11-helengine-psp-runtime-startup-checkpoints.md  2026-05-11-helengine-psp-textured-cube-grid.md  2026-05-12-helengine-psp-axis-test.md  2026-05-12-helengine-psp-colored-cube-grid-fixed-function.md  2026-05-12-helengine-psp-demo-disc-menu-2d.md  2026-05-12-helengine-psp-fixed-function-cube-test.md  2026-05-12-helengine-psp-textured-cube-grid-fixed-function.md  2026-05-13-helengine-psp-demo-disc-main-menu-startup.md  2026-05-13-helengine-psp-platform-info-startup.md  2026-05-14-runtime-asset-id.md  2026-05-15-psp-cube-test-fixed-function-gpu-lighting.md  2026-05-15-psp-dynamic-batching.md  2026-05-16-psp-scaled-cube-sample.md  2026-05-17-generic-platform-texture-format-capabilities.md  2026-06-29-psp-physics-performance.md
docs/superpowers/specs/: 2026-05-01-helengine-sony-psp-bootstrap-design.md  2026-05-10-helengine-psp-city-cube-test-design.md  2026-05-11-helengine-psp-blank-frame-boot-design.md  2026-05-11-helengine-psp-directional-lighting-design.md  2026-05-11-helengine-psp-runtime-startup-checkpoints-design.md  2026-05-11-helengine-psp-textured-cube-grid-design.md  2026-05-12-helengine-psp-axis-test-design.md  2026-05-12-helengine-psp-colored-cube-grid-fixed-function-design.md  2026-05-12-helengine-psp-demo-disc-menu-2d-design.md  2026-05-12-helengine-psp-fixed-function-cube-test-design.md  2026-05-12-helengine-psp-textured-cube-grid-fixed-function-design.md  2026-05-13-helengine-psp-demo-disc-main-menu-startup-design.md  2026-05-13-helengine-psp-platform-info-startup-design.md  2026-05-14-runtime-asset-id-design.md  2026-05-15-helengine-psp-runtime-model-caching-design.md  2026-05-15-psp-cube-test-fixed-function-gpu-lighting-design.md  2026-05-15-psp-dynamic-batching-design.md  2026-05-16-psp-scaled-cube-sample-design.md  2026-05-17-generic-platform-texture-format-capabilities-design.md  2026-06-29-psp-physics-performance-design.md  2026-07-22-psp-physics-scene-binding-trace-design.md
scripts/: launch_in_emulator.ps1
src/: main.cpp
src/generated-compat/: Attribute.hpp  ftruncate_shim.cpp  libcdvd.h
src/platform/psp/: PspAppRootPathResolver.cpp  (+11 more)
tools/: fix_demo_disc_return_component.ps1  install_psp_output_to_ppsspp.ps1  run_ppsspp_boot_check.ps1  update_psp_demo_disc_build.ps1
(+20 files in other folders)
